Fix alignment issue

--- a/static/styles.css
+++ b/static/styles.css
@@ -79,7 +79,7 @@ ol{
     border-radius: 20px;
     background-color:#6495ED;
     color:white;
-    padding: 0.5em 0.2em 0.8em 0.5em;
+    padding: 0.8em 0.2em 0.8em 0.5em;
     
 }
 li{
